feat - cart - Add API endpoint to create new cart
